# Trabajos_Universidad_UPM

./: README.md
Trabajo Informatica 3/: README.md
Trabajo Informatica 3/Chess/: Chess.vcxproj  Chess.vcxproj.filters  Pang.vcxproj  Pang.vcxproj.filters
Trabajo Informatica 3/Chess/src/: Alfil.cpp  Alfil.h  Chess.cpp  Coordinador.cpp  Coordinador.h  ListaPiezas.cpp  ListaPiezas.h  Peon.cpp  Peon.h  Torre.cpp  Torre.h  caballo.cpp  caballo.h  coordenada.cpp  (+13 more)
Trabajo Micro SED/: .gitignore
Trabajo Micro SED/Proyecto/: .cproject  .mxproject  .project  ControlRiego Debug.launch  ControlRiego.ioc
Trabajo Micro SED/STM32-MCU-s-DHT11-Temperature-Humidity-Sensor-HAL-Library-With-Timer--master/: dht11.c
Trabajo Sistemas Informaticos/: Changelog.md  README.md
Trabajo Sistemas Informaticos/workspace/: .gitignore
Trabajo Sistemas Informaticos/workspace/src/: CMakeLists.txt  Esfera.cpp  MundoCliente.cpp  MundoServidor.cpp  Plano.cpp  Raqueta.cpp  Socket.cpp  Vector2D.cpp  bot.cpp  cliente.cpp  logger.cpp  servidor.cpp
Trabajo VHDL SED y practicas/: Nexys4DDR_Master.xdc  SED_LAB.rar
Trabajo VHDL SED y practicas/Bin_to_BCD_decoder/: Bin_to_BCD_decoder.xpr
Trabajo VHDL SED y practicas/Lab_1/: Lab_1.xpr
Trabajo VHDL SED y practicas/MUX_ECONF/: DEMUX_tb_behav.wcfg  MUX_ECONF.xpr
Trabajo VHDL SED y practicas/Practica3/: Practica3.xpr
Trabajo VHDL SED y practicas/expendedora/: expendedora.xpr
Trabajo VHDL SED y practicas/lab_1_tarea1/: lab_1_tarea1.xpr
Trabajo VHDL SED y practicas/mux2bit/: mux2bit.xpr
Trabajo VHDL SED y practicas/test_examen/: test_examen.xpr
(+668 files in other folders)
